fix code wrapping

--- a/_sass/_skeleton.scss
+++ b/_sass/_skeleton.scss
@@ -307,13 +307,17 @@ li {
 /* Code
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 code {
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
-  font-size: 90%;
-  white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px; }
+  display: inline-block;
+    padding: .2rem .5rem;
+    margin: 0 .2rem;
+    font-size: 90%;
+    white-space: pre-wrap;
+    background: #F1F1F1;
+    border: 1px solid #E1E1E1;
+    border-radius: 4px;
+    width: 100%;
+    box-sizing: border-box;
+   }
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
